[gd_scene load_steps=15 format=2]

[ext_resource path="res://shiyori.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Scaly Sans Caps.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Spawner.gd" type="Script" id=3]
[ext_resource path="res://level.gd" type="Script" id=4]
[ext_resource path="res://World1Between.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Scaly Sans.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 1728.51 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 148.331, 611.213 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 810.84, 38.2819 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Container" type="Node2D"]
position = Vector2( 447.591, 8 )
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512.73, 511.528 )
current = true

[node name="Levels" type="Node2D" parent="." groups=[
"Stretchable",
]]
light_mask = 2
__meta__ = {
"_editor_description_": ""
}

[node name="LevelExit" type="Area2D" parent="Levels" groups=[
"LevelExit",
"Wall",
]]
collision_layer = 4
collision_mask = 63

[node name="ExitR" type="CollisionShape2D" parent="Levels/LevelExit"]
position = Vector2( 2000, 500 )
scale = Vector2( 2, 1.5 )
shape = SubResource( 1 )

[node name="ExitU" type="CollisionShape2D" parent="Levels/LevelExit"]
position = Vector2( 525.384, -2021.12 )
rotation = 1.5708
scale = Vector2( 2, 1 )
shape = SubResource( 1 )

[node name="ExitD" type="CollisionShape2D" parent="Levels/LevelExit"]
position = Vector2( 525.384, 3040.15 )
rotation = 1.5708
scale = Vector2( 2, 1 )
shape = SubResource( 1 )

[node name="ExitL" type="CollisionShape2D" parent="Levels/LevelExit"]
position = Vector2( -1000, 500 )
scale = Vector2( 2, 1.5 )
shape = SubResource( 1 )

[node name="FireWall" type="StaticBody2D" parent="Levels" groups=[
"Firewall",
]]
collision_layer = 4
collision_mask = 8

[node name="FireWallL" type="CollisionShape2D" parent="Levels/FireWall"]
position = Vector2( -231.377, 549.463 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 2 )

[node name="FireWallR" type="CollisionShape2D" parent="Levels/FireWall"]
position = Vector2( 1242.22, 539.949 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 2 )

[node name="PlayerWall" type="StaticBody2D" parent="Levels" groups=[
"Wall",
]]
collision_layer = 4

[node name="PlayerWallD" type="CollisionShape2D" parent="Levels/PlayerWall"]
position = Vector2( 501.448, 1185.25 )
shape = SubResource( 3 )

[node name="PlayerWallU" type="CollisionShape2D" parent="Levels/PlayerWall"]
position = Vector2( 501.448, 72.2222 )
shape = SubResource( 3 )

[node name="PlayerWallL" type="CollisionShape2D" parent="Levels/PlayerWall"]
position = Vector2( -155.782, 549.463 )
shape = SubResource( 2 )

[node name="PlayerWallR" type="CollisionShape2D" parent="Levels/PlayerWall"]
position = Vector2( 1166.62, 539.949 )
shape = SubResource( 2 )

[node name="World1Between" parent="Levels" groups=[
"world1",
] instance=ExtResource( 5 )]
light_mask = 2
position = Vector2( -447.093, -100 )

[node name="Spawner" type="Node2D" parent="Levels"]
position = Vector2( 0, 300 )
script = ExtResource( 3 )

[node name="Basic1" type="Node2D" parent="Levels/Spawner" groups=[
"Basic",
"Spawn",
]]
position = Vector2( 104.115, -558.538 )

[node name="Rare1" type="Node2D" parent="Levels/Spawner" groups=[
"Rare",
"Spawn",
]]
position = Vector2( 204.115, -656.811 )

[node name="Basic2" type="Node2D" parent="Levels/Spawner" groups=[
"Basic",
"Spawn",
]]
position = Vector2( 263.199, -558.538 )

[node name="Basic3" type="Node2D" parent="Levels/Spawner" groups=[
"Basic",
"Spawn",
]]
position = Vector2( 416.409, -558.538 )

[node name="Rare2" type="Node2D" parent="Levels/Spawner" groups=[
"Rare",
"Spawn",
]]
position = Vector2( 504.115, -656.811 )

[node name="Basic4" type="Node2D" parent="Levels/Spawner" groups=[
"Basic",
"Spawn",
]]
position = Vector2( 580.115, -558.538 )

[node name="Basic5" type="Node2D" parent="Levels/Spawner" groups=[
"Basic",
"Spawn",
]]
position = Vector2( 727.115, -558.538 )

[node name="Rare3" type="Node2D" parent="Levels/Spawner" groups=[
"Rare",
"Spawn",
]]
position = Vector2( 804.115, -656.811 )

[node name="Basic6" type="Node2D" parent="Levels/Spawner" groups=[
"Basic",
"Spawn",
]]
position = Vector2( 877.115, -558.538 )

[node name="HUD" type="CanvasLayer" parent="." groups=[
"UI",
]]

[node name="TimeText" type="RichTextLabel" parent="HUD"]
anchor_right = 0.1
anchor_bottom = 0.02
margin_left = 1626.1
margin_top = 41.6222
margin_right = 1685.1
margin_bottom = 64.6222
grow_horizontal = 0
focus_mode = 2
size_flags_horizontal = 3
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "0000.0"
text = "0000.0"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpText" type="RichTextLabel" parent="HUD"]
anchor_right = 0.1
anchor_bottom = 0.02
margin_left = 38.5083
margin_top = 41.6222
margin_right = 97.5083
margin_bottom = 64.6222
grow_horizontal = 0
focus_mode = 2
size_flags_horizontal = 3
custom_fonts/bold_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "0.0"
text = "0.0"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="RichTextLabel" parent="HUD"]
anchor_right = 0.1
anchor_bottom = 0.016
margin_left = 1626.1
margin_top = 80.2222
margin_right = 1685.1
margin_bottom = 103.222
grow_horizontal = 0
focus_mode = 2
size_flags_horizontal = 3
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "90000"
text = "90000"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameplay" type="YSort" parent="."]

[node name="Player" parent="Gameplay" groups=[
"Shiyori",
] instance=ExtResource( 1 )]
position = Vector2( 510, 750 )

[node name="Transition" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="rare_time" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="body_entered" from="Levels/LevelExit" to="." method="_on_LevelExit_body_entered"]
[connection signal="timeout" from="rare_time" to="Levels/Spawner" method="_on_rare_time_timeout"]
